# zmq_publisher

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.md  config.json  config_new.json  config_old.json  main.cpp  massif.out.1388  publisher  screen_publisher.sh
cmake/: CPMConfig.cmake
command_management/: CommandRunner.h  MdumpCommandRunner.cpp  MdumpCommandRunner.h
config/: channel_map.json  config.json  config.tmp  logger_config.json  pedestals.json  printer_config.json
dashboard_webpage/: channel_info.py  data_collection.py  dump.rdb  main.py  main_no_webpage.py
dashboard_webpage/static/: data_utils.js  performance_histogram_update.js  performance_plot_update.js  performance_table_update.js  plot_update.js  plot_update_test.js  styles.css  table_update.js
dashboard_webpage/templates/: index.html  system_performance.html
data_grabber/: EventGrabber.cpp  EventGrabber.h
data_transmitter/: DataBuffer.h  DataChannel.cpp  DataChannel.h  DataChannelManager.cpp  DataChannelManager.h  DataChannelProcessesManager.cpp  DataChannelProcessesManager.h  DataTransmitter.cpp  DataTransmitter.h  DataTransmitterManager.cpp  DataTransmitterManager.h
docs/html/: CommandProcessor_8h_source.html  CommandRunner_8h_source.html  DataBuffer_8h_source.html  DataChannelManager_8h_source.html  DataChannelProcessesManager_8h_source.html  DataChannel_8h_source.html  DataTransmitterManager_8h_source.html  DataTransmitter_8h_source.html  EventLoopManager_8h_source.html  GeneralProcessorFactory_8h_source.html  GeneralProcessor_8h_source.html  JsonManager_8h_source.html  ProjectPrinter_8h_source.html  SignalHandler_8h_source.html  TypeChecker_8h_source.html  annotated.html  classCommandProcessor-members.html  classCommandProcessor.html  classCommandRunner-members.html  classCommandRunner.html  classDataBuffer-members.html  classDataBuffer.html  classDataChannel-members.html  classDataChannel.html  classDataChannelManager-members.html  classDataChannelManager.html  classDataChannelProcessesManager-members.html  classDataChannelProcessesManager.html  classDataTransmitter-members.html  classDataTransmitter.html  classDataTransmitterManager-members.html  classDataTransmitterManager.html  classEventLoopManager-members.html  classEventLoopManager.html  classGeneralProcessor-members.html  classGeneralProcessor.html  classGeneralProcessorFactory-members.html  classGeneralProcessorFactory.html  classJsonManager-members.html  classJsonManager.html  (+47 more)
docs/html/search/: all_0.js  (+54 more)
docs/latex/: annotated.tex  classCommandProcessor.eps  classCommandProcessor.tex  classCommandRunner.tex  classDataBuffer.tex  classDataChannel.tex  classDataChannelManager.tex  classDataChannelProcessesManager.tex  classDataTransmitter.tex  classDataTransmitterManager.tex  classEventLoopManager.tex  classGeneralProcessor.eps  classGeneralProcessor.tex  classGeneralProcessorFactory.tex  classJsonManager.tex  classProjectPrinter.tex  classSignalHandler.tex  classTypeChecker.tex  dir_3b62d2db75b939fec20514303fc69ddb.tex  dir_3ba9dd5c5c78261692d11794af7b7083.tex  dir_3be03dccf140f7d6396488fde1a12e7a.tex  dir_49d4c9a753a96d134eb0b8f5509f3bda.tex  dir_ab2856d8d17e65f626c9b6f2b64c361c.tex  dir_c6c62128870a92822d079dd15c75e31f.tex  dir_cb2b26f1cbd15a6dab1a7ef49bd53504.tex  dir_f58b83fb1ac12f8e0756f8d21ae46dc9.tex  dir_fa6d7aea6af620970233fda644d129b0.tex  files.tex  hierarchy.tex  main_8cpp.tex  refman.tex
environment_setup/: detect_environment.sh  environment_variables.txt  setup_environment.sh
event_processor/: EventProcessor.cpp  EventProcessor.h  MdumpPackage.cpp  MdumpPackage.h  MidasBank.cpp  MidasBank.h  MidasEvent.cpp  MidasEvent.h
example_receiver/: ExampleReceiver.cpp  example_receiver
flask_server/: data_pipeline.py  dump.rdb  flask_server.py  screen_flask.sh  screen_redis.sh
flask_server/templates/: index.html  oscilloscope.html
histogram_management/: HistogramStorage.cpp  HistogramStorage.h
include/data_transmitter/: DataBuffer.h  DataChannel.h  DataChannelManager.h  DataChannelProcessesManager.h  DataTransmitter.h  DataTransmitterManager.h
include/processors/: CommandProcessor.h  GeneralProcessorFactory.h  MidasEventProcessor.h  MidasOdbProcessor.h
include/utilities/: JsonManager.h  LoggerConfig.h  SignalHandler.h  TypeChecker.h
midas_connector/: MidasConnector.cpp  MidasConnector.h  ODBGrabber.cpp  ODBGrabber.h
multi_threading/: MdumpDatabase.cpp  MdumpDatabase.h
processors/: CRProcessor.cpp  CRProcessor.h  CommandProcessor.cpp  CommandProcessor.h  GeneralProcess.h  GeneralProcessor.cpp  GeneralProcessor.h  GeneralProcessorFactory.cpp  GeneralProcessorFactory.h  HistogramProcessor.cpp  HistogramProcessor.h  MdumpProcessor.cpp  MdumpProcessor.h  MidasEventProcessor.cpp  MidasEventProcessor.h  ODBProcessor.cpp  ODBProcessor.h  PerformanceProcessor.cpp  PerformanceProcessor.h  RunNumberProcessor.cpp  RunNumberProcessor.h
scripts/: build.sh  publisher_cronjob.sh  run.sh  screen_publisher.sh  screen_publisher_cronjob.sh  screen_webpage.sh  stop_publisher_cronjob_screen.sh  stop_publisher_screen.sh  stop_webpage_screen.sh
scripts/build_scripts/: build.sh
scripts/environment/: .env  .helpers.sh  detect_environment.sh  setup_environment.sh
scripts/environment_setup/: detect_environment.sh  environment_variables.txt
scripts/screen/: screen.sh  screen_publisher.sh
scripts/startup_scripts/: screen_publisher.sh  screen_webpage.sh
src/: main.cpp
src/command_management/: CommandRunner.cpp
src/data_transmitter/: DataChannel.cpp  DataChannelManager.cpp  DataChannelProcessesManager.cpp  DataTransmitter.cpp  DataTransmitterManager.cpp
src/example_receiver/: ExampleReceiver.cpp
src/processors/: CommandProcessor.cpp  GeneralProcessor.cpp  GeneralProcessorFactory.cpp  MidasEventProcessor.cpp  MidasOdbProcessor.cpp
utilities/: CommandManager.cpp  CommandManager.h  EventLoopManager.cpp  EventLoopManager.h  JsonManager.cpp  JsonManager.h  MdumpCommandManager.cpp  MdumpCommandManager.h  ProjectPrinter.cpp  ProjectPrinter.h  SignalHandler.cpp  SignalHandler.h  TypeChecker.h  printer_config.json
(+4 files in other folders)
